[gd_scene load_steps=7 format=3 uid="uid://blbbdx55fn8f6"]

[ext_resource type="Script" uid="uid://by8oft8tqjsyy" path="res://scripts/world_scripts/last_level/part_2.gd" id="1_5uuc5"]
[ext_resource type="Texture2D" uid="uid://8qceklvmq0ty" path="res://assets/characters/minigame_assets/broly_level/part_2.png" id="1_p5sya"]
[ext_resource type="PackedScene" uid="uid://ct2rfy2e8m43c" path="res://scenes/player.tscn" id="3_i43x2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5uuc5"]
size = Vector2(63, 39)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i43x2"]
size = Vector2(67, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cuvgk"]
size = Vector2(38, 51)

[node name="part_2" type="Node2D"]
script = ExtResource("1_5uuc5")

[node name="Part2" type="Sprite2D" parent="."]
position = Vector2(240, 240)
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_p5sya")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(36, 131, 72, 131, 72, 108, 168, 108, 168, 132, 201, 132, 201, 108, 216, 108, 216, 53, 264, 53, 264, 107, 279, 107, 279, 132, 312, 132, 312, 107, 408, 108, 408, 132, 444, 132, 444, 287, 478, 287, 478, 312, 444, 312, 444, 432, 264, 432, 264, 468, 216, 468, 216, 432, 36, 432, 36, 134, -24, 190, -18, 508, 366, 512, 511, 477, 513, 170, 485, 10, 89, 45, -50, 101, 31, 169)

[node name="SpawnPoints" type="Node" parent="."]

[node name="spawnpoint1" type="Marker2D" parent="SpawnPoints"]
position = Vector2(241, 427)

[node name="spawnpoint2" type="Marker2D" parent="SpawnPoints"]
position = Vector2(435, 303)

[node name="spawnpoint3" type="Marker2D" parent="SpawnPoints"]
position = Vector2(241, 105)

[node name="next_scene" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="next_scene"]
position = Vector2(239.5, 64.5)
shape = SubResource("RectangleShape2D_5uuc5")

[node name="previous_scene" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="previous_scene"]
position = Vector2(241.5, 461)
shape = SubResource("RectangleShape2D_i43x2")

[node name="previous_scene_2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="previous_scene_2"]
position = Vector2(477, 299.5)
shape = SubResource("RectangleShape2D_cuvgk")

[node name="Player" parent="." instance=ExtResource("3_i43x2")]
position = Vector2(260, 369)
current_ball = "dragon_ball_7"

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(-1, 1)
zoom = Vector2(4, 4)
limit_left = 0
limit_top = 0
limit_right = 480
limit_bottom = 480
limit_smoothed = true
rotation_smoothing_enabled = true

[connection signal="body_entered" from="next_scene" to="." method="_on_next_scene_body_entered"]
[connection signal="body_entered" from="previous_scene" to="." method="_on_previous_scene_body_entered"]
[connection signal="body_entered" from="previous_scene_2" to="." method="_on_previous_scene_2_body_entered"]
